@@ -1,0 +1,3 @@
+Site URL: https://inporn.com/
+Contact: https://inporn.com/information/support/
+DMCA: https://inporn.com/information/dmca/
