@@ -29,12 +29,15 @@ site4 = AdultSite('hdzog', '[COLOR hotpink]HD Zog[/COLOR]', 'https://hdzog.com/'
 site5 = AdultSite('vjav', '[COLOR hotpink]Vjav[/COLOR]', 'https://vjav.com/', 'vjav.png', 'vjav')
 site6 = AdultSite('shemalez', '[COLOR hotpink]ShemaleZ[/COLOR]', 'https://shemalez.com/', 'shemalez.png', 'shemalez')
 site7 = AdultSite('upornia', '[COLOR hotpink]Upornia[/COLOR]', 'https://upornia.com/', 'upornia.png', 'upornia')
-#site8 = AdultSite('pornzog', '[COLOR hotpink]Pornzog[/COLOR]', 'https://pornzog.com/', 'pornzog.png', 'pornzog')
-#site9 = AdultSite('manysex', '[COLOR hotpink]Manysex[/COLOR]', 'https://manysex.com/', 'manysex.png', 'manysex')
-#site10 = AdultSite('hotmovs', '[COLOR hotpink]Hotmovs[/COLOR]', 'https://hotmovs.com/', 'hotmovs.png', 'hotmovs')
-#site11 = AdultSite('tporn', '[COLOR hotpink]TPorn[/COLOR]', 'https://tporn.xxx/', 'tporn.png', 'tporn')
-#site12 = AdultSite('seexxx', '[COLOR hotpink]See XXX[/COLOR]', 'https://see.xxx/', 'seexxx.png', 'seexxx')
+# site8 = AdultSite('pornzog', '[COLOR hotpink]Pornzog[/COLOR]', 'https://pornzog.com/', 'pornzog.png', 'pornzog')
+site9 = AdultSite('manysex', '[COLOR hotpink]Manysex[/COLOR]', 'https://manysex.com/', 'manysex.png', 'manysex')
+site10 = AdultSite('hotmovs', '[COLOR hotpink]Hotmovs[/COLOR]', 'https://hotmovs.com/', 'hotmovs.png', 'hotmovs')
+# site11 = AdultSite('tporn', '[COLOR hotpink]TPorn[/COLOR]', 'https://tporn.xxx/', 'tporn.png', 'tporn')
+# site12 = AdultSite('seexxx', '[COLOR hotpink]See XXX[/COLOR]', 'https://see.xxx/', 'seexxx.png', 'seexxx')
 site13 = AdultSite('thegay', '[COLOR hotpink]The Gay[/COLOR]', 'https://thegay.com/', 'thegay.png', 'thegay')
+site14 = AdultSite('inporn', '[COLOR hotpink]Inporn[/COLOR]', 'https://inporn.com/', 'inporn.png', 'inporn')
+site15 = AdultSite('desiporn', '[COLOR hotpink]Desiporn[/COLOR]', 'https://desiporn.tube/', 'desiporn.png', 'desiporn')
+
 
 def getBaselink(url):
     if 'txxx.com' in url:
@@ -53,18 +56,22 @@ def getBaselink(url):
         siteurl = site6.url
     elif 'upornia.com' in url:
         siteurl = site7.url
-#    elif 'pornzog.com' in url:
-#        siteurl = site8.url
-#    elif 'manysex.com' in url:
-#        siteurl = site9.url
-#    elif 'hotmovs.com' in url:
- #       siteurl = site10.url
-#    elif 'tporn.xxx' in url:
-#        siteurl = site11.url
-#    elif 'see.xxx' in url:
-#        siteurl = site12.url
+    # elif 'pornzog.com' in url:
+    #     siteurl = site8.url
+    elif 'manysex.com' in url:
+        siteurl = site9.url
+    elif 'hotmovs.com' in url:
+        siteurl = site10.url
+    # elif 'tporn.xxx' in url:
+    #     siteurl = site11.url
+    # elif 'see.xxx' in url:
+    #     siteurl = site12.url
     elif 'thegay.com' in url:
         siteurl = site13.url
+    elif 'inporn.com' in url:
+        siteurl = site14.url
+    elif 'desiporn.tube' in url:
+        siteurl = site15.url
     return siteurl
 
 
@@ -76,18 +83,20 @@ def getBaselink(url):
 @site5.register(default_mode=True)
 @site6.register(default_mode=True)
 @site7.register(default_mode=True)
-#@site8.register(default_mode=True)
-#@site9.register(default_mode=True)
-#@site10.register(default_mode=True)
-#@site11.register(default_mode=True)
-#@site12.register(default_mode=True)
+# @site8.register(default_mode=True)
+@site9.register(default_mode=True)
+@site10.register(default_mode=True)
+# @site11.register(default_mode=True)
+# @site12.register(default_mode=True)
 @site13.register(default_mode=True)
+@site14.register(default_mode=True)
+@site15.register(default_mode=True)
 def Main(url):
     siteurl = getBaselink(url)
     site.add_dir('[COLOR hotpink]Categories[/COLOR]', siteurl + 'categories', 'Categories', site.img_cat)
-    if any(x in siteurl for x in ['hclips', 'hdzog', 'txxx', 'shemalez','upornia','hotmovs']):
+    if any(x in siteurl for x in ['hclips', 'hdzog', 'txxx', 'shemalez', 'upornia', 'hotmovs', 'inporn', 'manysex']):
         site.add_dir('[COLOR hotpink]Channels[/COLOR]', siteurl + 'channels', 'Channels')
-    if any(x in siteurl for x in ['hdzog', 'txxx', 'tubepornclassic', 'vjav', 'shemalez','upornia','thegay','tporn','seexxx','pornzog','hotmovs']):
+    if any(x in siteurl for x in ['hdzog', 'txxx', 'tubepornclassic', 'vjav', 'shemalez', 'upornia', 'thegay', 'tporn', 'seexxx', 'pornzog', 'hotmovs', 'inporn', 'manysex']):
         site.add_dir('[COLOR hotpink]Models[/COLOR]', siteurl + 'models', 'Models')
     site.add_dir('[COLOR hotpink]Search[/COLOR]', siteurl + 'search.', 'Search', site.img_search)
     List(siteurl + 'latest-updates')
@@ -107,6 +116,10 @@ def List(url, page=1):
         aurl = apiurl.format('latest-updates', c1, c2, page, 'day')
     else:
         aurl = apiurl.format(url, '', '', page, 'day')
+    if 'manysex.com' in aurl:
+        aurl = aurl.replace('json/videos/', 'json/videos2/')
+        aurl = aurl.replace('api/videos.', 'api/videos2.')
+        aurl = aurl.replace('.day.', '..')
     jdata = json.loads(utils.getHtml(aurl, siteurl))
 
     if not jdata.get('videos'):
@@ -239,7 +252,9 @@ def Playvid(url, name, download=None):
     vidhtml = utils.getHtml(vurl, siteurl)
     r = re.search('video_url":"([^"]+)', vidhtml)
     if r:
-        videourl = siteurl[:-1] + txxx.Tdecode(r.group(1)) + '|Referer=' + siteurl
+        videourl = txxx.Tdecode(r.group(1)) + '|Referer=' + siteurl
+        if not videourl.startswith('http'):
+            videourl = siteurl[:-1] + videourl
         vp.play_from_direct_link(videourl)
     else:
         vp.progress.close()
